--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -1,6 +1,20 @@
-body{
-    background-color: blue;
+body {
+    background-color: #264653;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5vw;
 }
-#main-title{
+
+#main-title {
     text-align: center;
+}
+
+#task-form {
+    display: none;
+}
+
+#add-task-button {
+    position: fixed;
+    bottom: 10;
+    left: 10;
+    width: 5vh;
 }
