Add button now changes from task view to add view and back

--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -8,13 +8,13 @@ body {
     text-align: center;
 }
 
-#task-form {
-    display: none;
-}
-
-#add-task-button {
+.task-buttons {
     position: fixed;
     bottom: 10;
     left: 10;
     width: 5vh;
+}
+
+.d-none {
+    display: none;
 }
