--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -1,14 +1,16 @@
 body {
+    margin: 0;
     background-color: #264653;
     font-family: 'Lato', sans-serif;
     font-size: 1.5vw;
 }
 
 #main-title {
+    margin-top: 2vh;
     text-align: center;
 }
 
-.task-buttons {
+#task-button {
     position: fixed;
     bottom: 10;
     left: 10;
@@ -47,4 +49,12 @@ body {
 
 .rotated {
     transform: rotate(45deg);
+}
+
+#taskbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 4vh;
+    background-color: #000;
 }
