--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -3,6 +3,7 @@ body {
     background-color: #264653;
     font-family: 'Lato', sans-serif;
     font-size: 1.5vw;
+    text-align: center;
 }
 
 #main-title {
@@ -75,4 +76,10 @@ body {
 
 .card-status {
     border-bottom: 1px solid black;
+}
+
+.center-block {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
